[package]
name = "ff_12381"
version = "0.1.0"
authors = ["eschorn@integritychain.com <eschorn@integritychain.com>"]
edition = "2018"
build = "src/build.rs"
license = "bsd-3-clause"
repository = "https://github.com/eschorn1/ff_12381"
readme = "README.md"
keywords = ["cryptography", "elliptic", "BLS12-381"]
categories = ["cryptography"]
description = "Montgomery multiplication demonstrator"


[dependencies]


[build-dependencies]
cc = "1.0"


[dev-dependencies]
rand = "0.8.3"
num-bigint = "0.4"
num-traits = "0.2.14"
criterion = {version = "0.3.4", features = ["html_reports"] }
lazy_static = "1.4.0"


[profile.release]
debug = 2
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false


[profile.test]
debug = 2
debug-assertions = true
incremental = false
lto = true
opt-level = 3
overflow-checks = true


[[bench]]
path = "src/bench.rs"
name = "field_arithmetic"
harness = false


[profile.bench]
debug = 2
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
